chore: remove withdrawal day
