# backend/docs/swagger.json
@@ -21,7 +21,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_httpapi.ConfigDTO"
+                            "$ref": "#/definitions/httpapi.ConfigDTO"
                         }
                     }
                 }
@@ -49,7 +49,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_httpapi.GoalDTO"
+                            "$ref": "#/definitions/httpapi.GoalDTO"
                         }
                     },
                     "404": {
@@ -95,7 +95,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_httpapi.BacktestResultDTO"
+                            "$ref": "#/definitions/httpapi.BacktestResultDTO"
                         }
                     },
                     "404": {
@@ -139,7 +139,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_httpapi.BacktestResultDTO"
+                            "$ref": "#/definitions/httpapi.BacktestResultDTO"
                         }
                     },
                     "404": {
@@ -217,7 +217,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/internal_httpapi.UserDTO"
+                                "$ref": "#/definitions/httpapi.UserDTO"
                             }
                         }
                     },
@@ -257,7 +257,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/internal_httpapi.AccountDTO"
+                                "$ref": "#/definitions/httpapi.AccountDTO"
                             }
                         }
                     },
@@ -297,7 +297,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/internal_httpapi.GoalSummaryDTO"
+                                "$ref": "#/definitions/httpapi.GoalSummaryDTO"
                             }
                         }
                     },
@@ -337,7 +337,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_httpapi.CreateGoalRequest"
+                            "$ref": "#/definitions/httpapi.CreateGoalRequest"
                         }
                     }
                 ],
@@ -345,7 +345,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/internal_httpapi.CreateGoalResponse"
+                            "$ref": "#/definitions/httpapi.CreateGoalResponse"
                         }
                     },
                     "400": {
@@ -371,7 +371,7 @@
         }
     },
     "definitions": {
-        "internal_httpapi.AccountDTO": {
+        "httpapi.AccountDTO": {
             "type": "object",
             "properties": {
                 "account_id": {
@@ -405,7 +405,7 @@
                 }
             }
         },
-        "internal_httpapi.AllocationRequest": {
+        "httpapi.AllocationRequest": {
             "type": "object",
             "properties": {
                 "account_id": {
@@ -417,7 +417,7 @@
                 }
             }
         },
-        "internal_httpapi.BacktestMovementDTO": {
+        "httpapi.BacktestMovementDTO": {
             "type": "object",
             "properties": {
                 "account_id": {
@@ -436,27 +436,27 @@
                 }
             }
         },
-        "internal_httpapi.BacktestResultDTO": {
+        "httpapi.BacktestResultDTO": {
             "type": "object",
             "properties": {
                 "movements": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal_httpapi.BacktestMovementDTO"
+                        "$ref": "#/definitions/httpapi.BacktestMovementDTO"
                     }
                 },
                 "summary": {
-                    "$ref": "#/definitions/internal_httpapi.BacktestSummaryDTO"
+                    "$ref": "#/definitions/httpapi.BacktestSummaryDTO"
                 },
                 "vault_evolution": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal_httpapi.VaultEvolutionDTO"
+                        "$ref": "#/definitions/httpapi.VaultEvolutionDTO"
                     }
                 }
             }
         },
-        "internal_httpapi.BacktestSummaryDTO": {
+        "httpapi.BacktestSummaryDTO": {
             "type": "object",
             "properties": {
                 "completed_count": {
@@ -485,7 +485,7 @@
                 }
             }
         },
-        "internal_httpapi.ConfigDTO": {
+        "httpapi.ConfigDTO": {
             "type": "object",
             "properties": {
                 "poc_reference_date": {
@@ -494,13 +494,13 @@
                 }
             }
         },
-        "internal_httpapi.CreateGoalRequest": {
+        "httpapi.CreateGoalRequest": {
             "type": "object",
             "properties": {
                 "allocations": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal_httpapi.AllocationRequest"
+                        "$ref": "#/definitions/httpapi.AllocationRequest"
                     }
                 },
                 "duration_months": {
@@ -518,14 +518,10 @@
                 "target_amount": {
                     "type": "string",
                     "example": "10000.00"
-                },
-                "withdrawal_day": {
-                    "type": "integer",
-                    "example": 5
                 }
             }
         },
-        "internal_httpapi.CreateGoalResponse": {
+        "httpapi.CreateGoalResponse": {
             "type": "object",
             "properties": {
                 "goal_id": {
@@ -536,7 +532,7 @@
                 }
             }
         },
-        "internal_httpapi.GoalAllocationDTO": {
+        "httpapi.GoalAllocationDTO": {
             "type": "object",
             "properties": {
                 "account_id": {
@@ -556,13 +552,13 @@
                 }
             }
         },
-        "internal_httpapi.GoalDTO": {
+        "httpapi.GoalDTO": {
             "type": "object",
             "properties": {
                 "allocations": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal_httpapi.GoalAllocationDTO"
+                        "$ref": "#/definitions/httpapi.GoalAllocationDTO"
                     }
                 },
                 "duration_months": {
@@ -585,13 +581,10 @@
                 },
                 "vault_id": {
                     "type": "string"
-                },
-                "withdrawal_day": {
-                    "type": "integer"
                 }
             }
         },
-        "internal_httpapi.GoalSummaryDTO": {
+        "httpapi.GoalSummaryDTO": {
             "type": "object",
             "properties": {
                 "duration_months": {
@@ -608,13 +601,10 @@
                 },
                 "target_amount": {
                     "type": "string"
-                },
-                "withdrawal_day": {
-                    "type": "integer"
                 }
             }
         },
-        "internal_httpapi.UserDTO": {
+        "httpapi.UserDTO": {
             "type": "object",
             "properties": {
                 "accounts_count": {
@@ -628,7 +618,7 @@
                 }
             }
         },
-        "internal_httpapi.VaultEvolutionDTO": {
+        "httpapi.VaultEvolutionDTO": {
             "type": "object",
             "properties": {
                 "balance": {
